# laz-perf

./: CMakeLists.txt  package.json
.github/workflows/: ccpp.yml  js.yml
cmake/: common.cmake  functions.cmake  install.cmake
cpp/: CMakeLists.txt
cpp/emscripten/: CMakeLists.txt  laz-perf.cpp
cpp/examples/: CMakeLists.txt
cpp/lazperf/: decoder.hpp  encoder.hpp  las.hpp  lazperf.cpp  readers.cpp  streams.hpp  vlr.cpp  vlr.hpp  writers.cpp
cpp/lazperf/detail/: field_nir14.hpp  field_rgb14.hpp
cpp/test/: CMakeLists.txt  io_tests.cpp
cpp/tools/: CMakeLists.txt
js/: bundle.sh  package-lock.json  wasm.sh
lib/: laz-perf.js
lib/node/: laz-perf.wasm
